@@ -1,4 +1,4 @@
-C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/WXImage.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -DTARGET_WX -DDEBUG -D_DEBUG -DWXDEBUG -c src/WXImage.cpp -oobj/WXImage.o
-C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/WXCanvas.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -DTARGET_WX -DDEBUG -D_DEBUG -DWXDEBUG -c src/wxCanvas.cpp -oobj/wxCanvas.o
-C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/WXWindow.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -DTARGET_WX -DDEBUG -D_DEBUG -DWXDEBUG -c src/wxWindow.cpp -oobj/wxWindow.o
-C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/Main.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -DTARGET_WX -DDEBUG -D_DEBUG -DWXDEBUG -c src/Main.cpp -oobj/Main.o
+C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/WXImage.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -O6 -flto -march=native -frename-registers -fopenmp -D_GLIBCXX_PARALLEL -DTARGET_WX -c src/WXImage.cpp -oobj/WXImage.o
+C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/WXCanvas.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -O6 -flto -march=native -frename-registers -fopenmp -D_GLIBCXX_PARALLEL -DTARGET_WX -c src/wxCanvas.cpp -oobj/wxCanvas.o
+C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/WXWindow.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -O6 -flto -march=native -frename-registers -fopenmp -D_GLIBCXX_PARALLEL -DTARGET_WX -c src/wxWindow.cpp -oobj/wxWindow.o
+C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL/src/Main.cpp=C:/Users/Jester/Documents/SVN/Github/JFVGL/JFVGL#-std=c++11 -Wall -Wpedantic -Iinc -O6 -flto -march=native -frename-registers -fopenmp -D_GLIBCXX_PARALLEL -DTARGET_WX -c src/Main.cpp -oobj/Main.o
