@@ -1537,6 +1537,7 @@
       <in>WXImage.h</in>
       <in>WXWindow.cpp</in>
       <in>WXWindow.h</in>
+      <in>prec.h</in>
     </df>
   </logicalFolder>
   <projectmakefile>Makefile</projectmakefile>
